# serializer version: 1
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('example_id',
                           'random') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM posthog_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.1
  '''
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('example_id',
                           'random') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) ),
       flags_to_override AS
    (SELECT key
     FROM posthog_featureflag
     WHERE team_id = 2
       AND ensure_experience_continuity = TRUE
       AND active = TRUE
       AND deleted = FALSE
       AND key NOT IN
         (SELECT feature_flag_key
          FROM existing_overrides) )
  INSERT INTO posthog_featureflaghashkeyoverride (team_id, person_id, feature_flag_key, hash_key)
  SELECT team_id,
         person_id,
         key,
         'random'
  FROM flags_to_override,
       target_person_ids
  WHERE EXISTS
      (SELECT 1
       FROM posthog_person
       WHERE id = person_id
         AND team_id = 2) ON CONFLICT DO NOTHING
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.2
  '''
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "posthog_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.3
  '''
  SELECT "posthog_featureflaghashkeyoverride"."feature_flag_key",
         "posthog_featureflaghashkeyoverride"."hash_key",
         "posthog_featureflaghashkeyoverride"."person_id"
  FROM "posthog_featureflaghashkeyoverride"
  WHERE ("posthog_featureflaghashkeyoverride"."person_id" IN (1,
                                                              2,
                                                              3,
                                                              4,
                                                              5 /* ... */)
         AND "posthog_featureflaghashkeyoverride"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.4
  '''
  SELECT (("posthog_person"."properties" -> 'email') = '"tim@posthog.com"'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.5
  '''
  SELECT pg_sleep(1);
  
  WITH target_person_ids AS
    (SELECT team_id,
            person_id
     FROM posthog_persondistinctid
     WHERE team_id = 2
       AND distinct_id IN ('example_id',
                           'random') ),
       existing_overrides AS
    (SELECT team_id,
            person_id,
            feature_flag_key,
            hash_key
     FROM posthog_featureflaghashkeyoverride
     WHERE team_id = 2
       AND person_id IN
         (SELECT person_id
          FROM target_person_ids) )
  SELECT key
  FROM posthog_featureflag
  WHERE team_id = 2
    AND ensure_experience_continuity = TRUE
    AND active = TRUE
    AND deleted = FALSE
    AND key NOT IN
      (SELECT feature_flag_key
       FROM existing_overrides)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.6
  '''
  SELECT pg_sleep(1);
  
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('example_id',
                                                      'random')
         AND "posthog_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_experience_continuity_working_slow_db.7
  '''
  SELECT pg_sleep(1);
  
  SELECT "posthog_persondistinctid"."person_id",
         "posthog_persondistinctid"."distinct_id"
  FROM "posthog_persondistinctid"
  WHERE ("posthog_persondistinctid"."distinct_id" IN ('random')
         AND "posthog_persondistinctid"."team_id" = 2)
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db
  '''
  SELECT pg_sleep(1);
  
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.1
  '''
  SELECT pg_sleep(1);
  
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_group_properties_and_slow_db.2
  '''
  SELECT pg_sleep(1);
  
  SELECT "posthog_grouptypemapping"."id",
         "posthog_grouptypemapping"."team_id",
         "posthog_grouptypemapping"."group_type",
         "posthog_grouptypemapping"."group_type_index",
         "posthog_grouptypemapping"."name_singular",
         "posthog_grouptypemapping"."name_plural"
  FROM "posthog_grouptypemapping"
  WHERE "posthog_grouptypemapping"."team_id" = 2
  '''
# ---
# name: TestResiliency.test_feature_flags_v3_with_slow_db_doesnt_try_to_compute_conditions_again
  '''
  SELECT pg_sleep(1);
  
  SELECT (("posthog_person"."properties" -> 'email') = '"tim@posthog.com"'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
         (("posthog_person"."properties" -> 'email') = '"tim@posthog.com"'
          AND "posthog_person"."properties" ? 'email'
          AND NOT (("posthog_person"."properties" -> 'email') = 'null')) AS "flag_X_condition_0",
         (true) AS "flag_X_condition_0"
  FROM "posthog_person"
  INNER JOIN "posthog_persondistinctid" ON ("posthog_person"."id" = "posthog_persondistinctid"."person_id")
  WHERE ("posthog_persondistinctid"."distinct_id" = 'example_id'
         AND "posthog_persondistinctid"."team_id" = 2
         AND "posthog_person"."team_id" = 2)
  '''
# ---
